# flask-gpt

./: README.md  pyproject.toml
src/flask_chatgpt/: __init__.py  app.py
src/flask_chatgpt/templates/: index.html
