[project]
name = "flask-chatgpt"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "subaru-hello", email = "octpsubaru@icloud.com" }
]
dependencies = ["flask~=2.3.2"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling","setuptools", "wheel", "flask"]
build-backend = "hatchling.build"
[tool.rye]
managed = true
[tool.hatch.metadata]
allow-direct-references = true
